changes in the NLP: now explode each text paragraph; added topic modeling

--- a/CollectZoteroHTMLs.ipynb
+++ b/CollectZoteroHTMLs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1c80aeb7",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1cb75526",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "586e1b28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_json(\"2023-05-10_Uni_Files_NLP.json\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "9b75fb11",
    "metadata": {},
    "outputs": [],
@@ -263,47 +274,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e9eaa204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ChatGPT_Terms=\"ChatGPT, GPT3, GPT4, OpenAI, AI, LLM, A.I, GPT, Chatbot, technology, tool, app, Artificial Intelligence, Large Language Models\"\n",
-    "ChatGPT_Terms=ChatGPT_Terms.split(\", \")\n",
-    "ChatGPT_Terms=[i.lower() for i in ChatGPT_Terms]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3b0702aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GPTparagraphs(p_list, by=ChatGPT_Terms):\n",
-    "    if p_list!=None:\n",
-    "        AI_Content=[]\n",
-    "        for text in p_list:\n",
-    "            AI_Content_Binary=nlp.WordlistFilter(text, by)\n",
-    "            if AI_Content_Binary==True:\n",
-    "                AI_Content.append(text)\n",
-    "        return AI_Content\n",
-    "            \n",
+    "ChatGPT_Terms=\"ChatGPT, GPT3, GPT4, OpenAI, AI, LLM, A.I, GPT, Chatbot, technology, tool, app, Artificial Intelligence, Large Language Models\"\n",
     "\n",
-    "\n",
-    "df[\"AI_paragraphs\"]=df.text.apply(GPTparagraphs)\n",
+    "df[\"AI_paragraphs\"]=df.text.apply(nlp.filter_paragraphs,by=ChatGPT_Terms)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "id": "f46d097e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column=\"AI_paragraphs\"\n",
+    "\n",
+    "df=df[df.file.apply(lambda x: x.endswith(\"html\"))]\n",
+    "\n",
+    "df=df[df.Title!='Research Posters - Faculty of Geosciences - Utrecht University']\n",
+    "\n",
+    "df=df.explode(column).reset_index(drop=True)\n",
+    "df=df[df[column].apply(lambda x: type(x)==str)]\n",
+    "df=df.drop_duplicates(column)\n",
+    "df[\"LEN\"]=df[column].apply(lambda x: len(x.split(\" \")))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "95cf2d02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cleaning done.\n",
+      "language detection done.\n",
+      "Translating...\n",
+      "nl Aan de han\n",
+      "nl Sinds de r\n",
+      "nl Tijdens de\n",
+      "nl Jivet wijs\n",
+      "nl In de work\n",
+      "nl Let op: he\n",
+      "nl ChatGPT ke\n",
+      "nl Deze en no\n",
+      "nl Ga het ges\n",
+      "nl Sander Bax\n",
+      "nl ChatGPT sc\n",
+      "nl ChatGPT ka\n",
+      "nl In een wet\n",
+      "nl De komst v\n",
+      "nl Het HOP in\n",
+      "nl ChatGPT ha\n",
+      "nl In het Bri\n",
+      "nl Een van de\n",
+      "nl Eerder mel\n",
+      "nl ChatGPT ka\n",
+      "nl De nieuwe \n",
+      "nl Ook op Til\n",
+      "nl Maar we zi\n",
+      "nl We vroegen\n",
+      "nl Daarop wer\n",
+      "nl AI gaat im\n",
+      "nl De zes uni\n",
+      "nl “De miljoe\n",
+      "nl Nuijten he\n",
+      "nl Wie al een\n",
+      "nl “We voldoe\n",
+      "nl De TU/e is\n",
+      "nl De start v\n",
+      "nl UM zoekend\n",
+      "nl Nieuwe mog\n",
+      "nl ChatGPT on\n",
+      "nl \"Voor de b\n",
+      "nl De geavanc\n",
+      "nl Die heeft \n",
+      "nl Volgens ha\n",
+      "nl Het is al \n",
+      "nl En hoe ga \n",
+      "nl Dat maakt \n",
+      "nl Universita\n",
+      "nl Google pub\n",
+      "nl Op dinsdag\n",
+      "nl De hype ro\n",
+      "nl Hij is hee\n",
+      "nl Wat ook he\n",
+      "nl In een con\n",
+      "nl \"We moeten\n",
+      "nl Kijk eens \n",
+      "nl Universite\n",
+      "nl Het Univer\n",
+      "nl In haar on\n",
+      "nl In een eer\n",
+      "nl ‘Een prett\n",
+      "nl Ischen ond\n",
+      "nl Onderzoek \n",
+      "nl Als online\n",
+      "nl Kunstmatig\n",
+      "nl Chatbot ho\n",
+      "nl Kun je ver\n",
+      "nl Sporters w\n",
+      "nl Een voetba\n",
+      "nl Onze mense\n",
+      "nl Docenten b\n",
+      "nl Moet ChatG\n",
+      "nl ‘Tekst- en\n",
+      "nl Aan de Ned\n",
+      "nl Axel Arnba\n",
+      "nl ChatGPT in\n",
+      "nl ‘Dit artik\n",
+      "nl De gevolge\n",
+      "nl ‘Met elkaa\n",
+      "nl Van Dis, B\n",
+      "nl Een chatbo\n",
+      "nl Op 16 janu\n",
+      "nl Er zijn ec\n",
+      "nl Jelle Zuid\n",
+      "nl Maar hoe b\n",
+      "nl Maar als h\n",
+      "nl Vergeet ni\n",
+      "nl Let op, al\n",
+      "nl Voor meer \n",
+      "nl Hoe ga je \n",
+      "nl Tips over \n",
+      "nl AI content\n",
+      "nl Engelstali\n",
+      "nl De deelnem\n",
+      "nl Slides Cha\n",
+      "nl Dit is nie\n",
+      "nl Verschille\n",
+      "nl Verzamelin\n",
+      "pure english text done. Next: Token & Lemmatizing.\n",
+      "Token & Lemmatizing done. Next: Remove Stopwords.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=nlp.NLP_Pipeline(df, sentiment=False, language=\"en\",translate=True, column=column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "a562e98b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=df[df.file.apply(lambda x: x.endswith(\"html\"))]\n",
-    "df2.text=df2[\"AI_paragraphs\"].apply(lambda x:\" \".join(x))"
+    "#df2.text=df2[\"AI_paragraphs\"].apply(lambda x:\" \".join(x))"
    ]
   },
   {
@@ -339,22 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "feb10742",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3=nlp.NLP_Pipeline(df2, sentiment=False, language=\"en\",translate=True)"
+    "df=df.reset_index(drop=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "15dc5a19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3.to_json(\"2023-05-10_Zotero_AI_nlp_en.json\")"
+    "df.to_json(\"2023-05-15_Zotero_AI_nlp_en.json\")"
    ]
   },
   {
@@ -363,30 +487,35 @@
    "id": "983e0050",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Lists=df3.NoStopwords.to_list()\n",
-    "Lists=[i for i in Lists if i!=None]\n",
-    "Words=[item for sublist in Lists for item in sublist]\n",
-    "\n",
-    "from collections import Counter\n",
-    "a_counter = Counter(Words)\n",
-    "most_common = a_counter.most_common(10)\n",
-    "\n",
-    "most_common"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "3bebd67a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ebf3f6b161134014a4a8339cd39d3bca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='column', options=('NoStopwords',), value='NoStopwords'), IntSlider…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interactive, interact\n",
     "\n",
     "@interact(column=[\"NoStopwords\"],Mostcommon=(5,200))\n",
     "def make_wordcloud(column=\"NoStopwords\",Mostcommon=20,Save_as=\"\"):\n",
-    "    hashtags=[i.lower() for s in df3[column].dropna() for i in s] # hashtags OR # no stopwords\n",
+    "    hashtags=[i.lower() for s in df[column].dropna() for i in s] # hashtags OR # no stopwords\n",
     "    analysis.make_wordcloud(hashtags,filename=Save_as,Mostcommon=Mostcommon)"
    ]
   },
