--- a/CollectZoteroHTMLs.ipynb
+++ b/CollectZoteroHTMLs.ipynb
@@ -287,12 +287,10 @@
     "            date=nan\n",
     "    return date\n",
     "\n",
-    "\n",
+    "print_time() \n",
     "print(\"This takes about: 3 minutes.\")\n",
     "\n",
     "df[\"date\"]=df.date.apply(pd.to_datetime,errors='coerce')\n",
-    "print_time()     \n",
-    "\n",
     "df[\"date\"]=df.apply(lambda x: find_date(x.url, x.date), axis=1)\n",
     "print_time()\n",
     "\n",
@@ -378,7 +376,6 @@
     "            h1=[item for sublist in [[i.text for i in div(\"h1\")] for div in All_divs if div(\"h1\")!=None] for item in sublist]\n",
     "            h2=[item for sublist in [[i.text for i in div(\"h2\")] for div in All_divs if div(\"h2\")!=None] for item in sublist]\n",
     "            h3=[item for sublist in [[i.text for i in div(\"h3\")] for div in All_divs if div(\"h3\")!=None] for item in sublist]\n",
-    "        \n",
     "\n",
     "            # here only get all divs\n",
     "            #text=[item for sublist in [[i.text for i in div(\"p\")] for div in All_divs if div(\"p\")!=None] for item in sublist]\n",
@@ -452,14 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf95e13a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "33442ea6",
    "metadata": {},
    "outputs": [],
@@ -488,8 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_json(\"2023-07-30_Uni_Files_NLP.json\")\n",
-    "\n"
+    "df=pd.read_json(\"2023-07-30_Uni_Files_NLP.json\")"
    ]
   },
   {
@@ -511,12 +499,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5994d5fb",
+   "cell_type": "markdown",
+   "id": "1de67f16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Edit & split text into paragraphs & sentences"
+   ]
   },
   {
    "cell_type": "code",
@@ -642,16 +630,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9827c2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d55e04c1",
    "metadata": {},
    "outputs": [],
@@ -729,26 +707,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae57fb43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b21dca7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df[df.sentences.apply(lambda x: len(x.replace('[^a-zA-Z]', ''))<10)][\"sentences\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "83074a2c",
    "metadata": {},
    "outputs": [],
@@ -804,16 +762,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "182cdd50",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "72d2fef0",
    "metadata": {},
@@ -837,17 +785,7 @@
     "print(pd. __version__)\n",
     "\n",
     "test=nlp.NLP_Pipeline(test, text_column=column, target_language=\"en\",sentiment=False)\n",
-    "test[\"source_language\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc08692b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
+    "test[\"NoStopwords\"]"
    ]
   },
   {
@@ -859,16 +797,6 @@
    "source": [
     "## takes approximately 80 minutes (last time)\n",
     "df=nlp.NLP_Pipeline(df, text_column=column, target_language=\"en\",sentiment=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25c88771",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -889,30 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_json(\"2023-07-30_ChatGPT_Sentences_NLP-Out_small.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b415caa5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns\n",
-    "\n",
-    "df2=df[['Uni','FileKey','url','date', 'Title','linkName', 'linkUrl', 'AI_paragraphs','text_clean', 'letters_count', 'word_count',\n",
-    "       'language', 'source_language', 'pure_text', 'Lemmata', 'NoStopwords']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15dc5a19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.to_json(\"2023-06-06_Zotero_AI_nlp_en2.json\")"
+    "df.to_json(\"2023-08-01_ChatGPT_Sentences_NLP-Out_small.json\")"
    ]
   }
  ],
